--- a/doc/website/docs/assets/css/custom-material.css
+++ b/doc/website/docs/assets/css/custom-material.css
@@ -183,7 +183,9 @@
   }
 }
 
-/* Hide the left sidebar on every page */
-.md-sidebar--primary{
-  display: none;
+/* Hide the left sidebar on larger screens, but keep it on mobile for the menu */
+@media screen and (min-width: 76.25em) {
+  .md-sidebar--primary {
+    display: none;
   }
+}
